[package]
name = "mcavatar"
version = "0.1.0"
authors = ["Andrew Steinborn <git@steinborn.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
cfg-if = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3.77"
imageproc = { version = "0.25.0", default-features = false }
hytale-skin-renderer = { path = "./src/hytale-skin-renderer", default-features = false, features = [
	"wasm",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.image]
# Make `image` more lightweight. We don't need every image format under the sun,
# just PNG.
version = "0.25"
default-features = false
features = ["png"]

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
